# MatrixWithExceptions

./: README.md
Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  main.cpp
Matrix/Exception/: DimensionMismatchError.h  DivideByZeroError.cpp  DivideByZeroError.h  MatrixDimensionMismatchError.cpp  MatrixDimensionMismatchError.h  MatrixError.cpp  MatrixError.h  MatrixInnerDimensionMismatchError.cpp  MatrixInnerDimensionMismatchError.h  MatrixOutOfBoundsError.cpp  MatrixOutOfBoundsError.h  OutOfBoundsError.h  VectorDimensionMismatchError.cpp  VectorDimensionMismatchError.h  VectorOutOfBoundsError.cpp  VectorOutOfBoundsError.h
